<resources>
    <string name="app_name" translatable="false">HyperCeiler</string>
    <string name="empty_lable" translatable="false" />
    <string name="system_ui_status_bar_icon_nfc" translatable="false">NFC</string>
    <string name="system_ui_status_bar_icon_vpn" translatable="false">VPN</string>
    <string name="location_simulation_gps" translatable="false">GPS</string>
    <string name="system_ui_statusbar_network_speed_Bs" translatable="false">B/s</string>
    <string name="system_ui_statusbar_network_speed_speedunits" translatable="false">KMG</string>
    <string name="array_netspeedicons_arrows" translatable="false">△▽ (▲▼)</string>
    <string name="array_netspeedicons_bullets" translatable="false">☖ ⛉ ( ☗ ⛊ )</string>
    <string name="array_netspeedicons_arrows_small" translatable="false">▵ ▿ ( ▴ ▾ )</string>
    <string name="array_netspeedicons_arrows_long1" translatable="false">↑ ↓</string>
    <string name="array_netspeedicons_arrows_long2" translatable="false">⇧ ⇩</string>
    <string name="system_ui_display_toast_title" translatable="false">Toast</string>
    <string name="summary_collapsed_preference_list" translatable="false">%1$s%2$s</string>
    <string name="networkboost" translatable="false">NetworkBoost</string>
    <string name="crc_value" translatable="false">399F71FC</string>
    <string name="home_title_custom_anim_param_1_title" translatable="false">BREAK_OPEN</string>
    <string name="home_title_custom_anim_param_2_title" translatable="false">OPEN_FROM_HOME</string>
    <string name="home_title_custom_anim_param_3_title" translatable="false">OPEN_FROM_RECENTS</string>
    <string name="home_title_custom_anim_param_4_title" translatable="false">CLOSE_TO_RECENTS</string>
    <string name="home_title_custom_anim_param_5_title" translatable="false">CLOSE_TO_HOME</string>
    <string name="home_title_custom_anim_param_6_title" translatable="false">CLOSE_FROM_FEED</string>
    <string name="home_title_custom_anim_param_7_title" translatable="false">APP_TO_APP</string>
    <string name="home_title_custom_anim_param_8_title" translatable="false">START_FIRST_TASK</string>
    <string name="home_title_custom_anim_param_9_title" translatable="false">CLOSE_TO_DRAG</string>
    <string name="home_title_custom_anim_param_RECT_CENTERX_title" translatable="false">RECT_CENTERX</string>
    <string name="home_title_custom_anim_param_RECT_CENTERY_title" translatable="false">RECT_CENTERY</string>
    <string name="home_title_custom_anim_param_RECT_WIDTH_title" translatable="false">RECT_WIDTH</string>
    <string name="home_title_custom_anim_param_RECT_RATIO_title" translatable="false">RECT_RATIO</string>
    <string name="home_title_custom_anim_param_RADIUS_title" translatable="false">RADIUS</string>
    <string name="home_title_custom_anim_param_ALPHA_title" translatable="false">ALPHA</string>
    <string name="miui_quick_settings_tiles_stock" translatable="false">reduce_brightness,vowifi1,vowifi2,cell,wifi,bt,airplane,autobrightness,mute,screenshot,flashlight,rotation,screenlock,dtmdtm,scanner,papermode,night,quietmode,batterysaver,uwb_shp,aitranslate,aisubtitles,freeformhang,vibrate,hotspot,sync,wirelesspower,nfc,dolbyatomssound,gps,edit,hearingassisttile,controls,wallet,inversion,saver,dark,onehanded,color_correction,user,dnd,settings</string>
    <string name="miui_quick_settings_tiles_stock_pad" translatable="false">reduce_brightness,vowifi1,vowifi2,cell,wifi,rotation,airplane,mute,screenshot,bt,autobrightness,screenlock,dtmdtm,night,papermode,quietmode,batterysaver,gps,flashlight,scanner,freeformhang,vibrate,hotspot,sync,wirelesspower,nfc,dolbyatomssound,edit,controls,workmode,wallet,inversion,saver,dark,onehanded,color_correction,user,dnd,settings</string>
    <string name="xposed_description">Make HyperOS/MIUI Great Again!</string>
    <string name="description_hyperos" translatable="false">Make HyperOS Great Again!</string>
    <string name="description_miui" translatable="false">Make MIUI Great Again!</string>
    <string name="new_permission_wifi_state_desc">add and delete files on device\'s internal storage</string>
    <string name="kill">Kill tool</string>
    <string name="development_ui">UI</string>
    <string name="development_debug_info">Debug info</string>
    <string name="development_prefs">Share preference</string>
    <string name="development_cmd_r">CMD with root</string>
    <string name="development_delete_all_dexkit_cache">Delete all DexKit cache</string>
    <string name="save_to_screen_title">Specification save location</string>
    <string name="only_new_version_can_do">Only newer versions supported</string>
    <string name="system_framework_phone_title">Network</string>
    <string name="system_framework_phone_network_title">Network settings</string>
    <string name="phone_double_5g_nr">Double card use 5G (SA+NSA)</string>
    <string name="phone_double_5g_nr_desc">Main and secondary SIM-card enable 5G at the same time (The secondary SIM-card only support NSA)</string>
    <string name="phone_double_5g_sa">Double card use SA (SA+SA)</string>
    <string name="phone_double_5g_sa_desc">Experimental feature. Make the secondary SIM-card support SA.</string>
    <string name="system_framework_phone_band_title">Band settings</string>
    <string name="phone_n1">N1 band</string>
    <string name="phone_n1_desc">Support N1 band (NR)</string>
    <string name="phone_n28">N28 band</string>
    <string name="phone_n28_desc">Support N28 band (NR)</string>
    <string name="phone_n5_n8">N5/N8 band</string>
    <string name="phone_n5_n8_desc">Enter *#*#65686633#*#* on the dialer interface to enable support for N5/N8 bands. If it shows \"enable N5 and N8 mode\", the feature will be successfully activated.</string>
    <string name="phone_flightmode_hotspot">Allow portable hotspot in Airplane mode</string>
    <string name="phone_flightmode_hotspot_desc">Allow Wi-Fi portable hotspot to be turned on in Airplane mode</string>
    <string name="camera">Camera</string>
    <string name="camera_custom_watermark">Custom device watermark</string>
    <string name="camera_custom_watermark_manufacturer">Manufacturer information</string>
    <string name="camera_custom_watermark_device">Device information</string>
    <string name="camera_settings_lab_options">Enable Lab options</string>
    <string name="camera_settings_track_eyes">Unlock Eye tracking focus</string>
    <string name="camera_max_brightness">Force maximum brightness when using camera</string>
    <string name="camera_black_leica">Black Leica Watermark</string>
    <string name="camera_black_leica_desc">Change the theme color of the Leica watermark to black when using it. Some devices do not support it yet.</string>
    <string name="camera_custom_theme_color">Customize theme color</string>
    <string name="camera_custom_theme_color_picker">Choose theme color</string>
    <string name="fileexplorer">File Manager</string>
    <string name="file_explorer_can_selectable">File Manager can be selectable</string>
    <string name="file_explorer_is_single_line">File Manager is single line</string>
    <string name="file_explorer_unlock_file_parse">Unlock file parse</string>
    <string name="system_ui_lockscreen_title">Lock screen</string>
    <string name="system_ui_navigation_title">Navigation</string>
    <string name="system_ui_statusbar_title">Status bar</string>
    <string name="system_ui_controlcenter_title">Control center</string>
    <string name="system_ui_other_title">Others</string>
    <string name="lbe">Permissions</string>
    <string name="lbe_disable_clipboard_tip">Hide toast tips</string>
    <string name="lbe_auto_start">Disable auto-shutdown of auto-start</string>
    <string name="lbe_clipboard_tip_toast">Read the clipboard using toast hints</string>
    <string name="lbe_clipboard_tip_toast_desc">Hide the dialog and allow the app to read the clipboard by default</string>
    <string name="aod">Always-on display</string>
    <string name="aod_hyperos">Always-on display and Lock screen editor</string>
    <string name="aod_unlock_always_on_display">Unlock the display time limit of the Always-on display</string>
    <string name="aod_unlock_always_on_display_more">Restart the System UI to fully enable the feature</string>
    <string name="aod_unlock_aon">Unlock Aod Aon</string>
    <string name="home_gesture">Gesture and navigation</string>
    <string name="home_layout">Layout</string>
    <string name="home_folder">Folder</string>
    <string name="home_drawer">Drawer</string>
    <string name="home_title">Icon and title</string>
    <string name="home_recent">Recents</string>
    <string name="home_widget">Widget</string>
    <string name="home_dock">Dock</string>
    <string name="home_other">Others</string>
    <string name="home_recent_blur_level">Blur level</string>
    <string name="screenrecorder">Screen Recorder</string>
    <string name="screen_recorder_force_support_playback_capture">Force enable AOSP screen recording support</string>
    <string name="screen_recorder_force_support_playback_capture_desc">Requires screen recording version support</string>
    <string name="screen_recorder_config">Add more frame rate and bitrate selections</string>
    <string name="screen_recorder_config_desc">Please choose according to the hardware situation</string>
    <string name="screen_recorder_more_volume">Unlock more Volume from</string>
    <string name="screen_recorder_more_volume_desc">Some version not support</string>
    <string name="screen_recorder_save_to_movies_desc">Specify the recording video save location to Movies/ScreenRecorder</string>
    <string name="security_center">Security</string>
    <string name="security_center_pad">Security</string>
    <string name="security_center_hyperos">Security</string>
    <string name="security_center_app_title">Manage apps</string>
    <string name="security_center_battery_title">Battery</string>
    <string name="security_center_privacy_title">Privacy protection</string>
    <string name="security_center_newbox_title">Sidebar</string>
    <string name="security_center_ai_clipboard">Protect clipboard</string>
    <string name="security_center_blur_location">Lower positioning accuracy</string>
    <string name="security_center_get_number">Manage the app to obtain the mobile phone number and log in with one click</string>
    <string name="security_center_other_title">Others</string>
    <string name="security_center_hide_xopt_mode_tip">Hide XOpt mode tip</string>
    <string name="weather">Weather</string>
    <string name="weather_device_level_title">Animation level</string>
    <string name="weather_card_display_type_title">Card display type</string>
    <string name="aiasst">Mi AI Translate</string>
    <string name="aiasst_ai_captions">Force enabled AI captions</string>
    <string name="aiasst_all_captions">Unlock multi-language online captions</string>
    <string name="aiasst_disable_watermark">Disable watermark</string>
    <string name="help_cant_see_apps_title">Can\'t find the app features on the homepage?</string>
    <string name="help_cant_see_apps_desc_no_hidden">To maintain the simplicity and usability of the homepage, we have hidden access to the following types of app features:\n\n - Those currently disabled or hidden\n - Those not found in your device\n - Those incompatible with the current version of the system or the app\n\nPlease troubleshoot based on the above information, restart HyperCeiler, and try again. If you still can\'t find the app features, it may be a bug. Please provide timely and effective feedback to us.\n\nThere are currently no hidden features!</string>
    <string name="help_cant_see_apps_switch">Hide this help in homepage</string>
    <string name="help_cant_see_apps_switch_desc">You can still find this page in \"Settings > Set up the homepage entry\". Reboot app to apply.</string>
</resources>