<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/system_framework_phone_title">
    <PreferenceCategory android:title="@string/system_framework_phone_network_title">

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_system_framework_network_flightmode_hotspot"
            android:summary="@string/phone_flightmode_hotspot_desc"
            android:title="@string/phone_flightmode_hotspot" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_phone_double_5g_nr"
            android:summary="@string/phone_double_5g_nr_desc"
            android:title="@string/phone_double_5g_nr" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_phone_double_5g_sa"
            android:summary="@string/phone_double_5g_sa_desc"
            android:title="@string/phone_double_5g_sa" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/system_framework_phone_band_title">

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_phone_n1"
            android:summary="@string/phone_n1_desc"
            android:title="@string/phone_n1" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_phone_n5_n8"
            android:summary="@string/phone_n5_n8_desc"
            android:title="@string/phone_n5_n8" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_phone_n28"
            android:summary="@string/phone_n28_desc"
            android:title="@string/phone_n28" />

    </PreferenceCategory>

</PreferenceScreen>