<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/screenrecorder">
    <PreferenceCategory>

        <SwitchPreference
            android:title="@string/screen_recorder_config"
            android:summary="@string/screen_recorder_config_desc"
            android:key="prefs_key_screenrecorder_config"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/screen_recorder_more_volume"
            android:summary="@string/screen_recorder_more_volume_desc"
            android:key="prefs_key_screenrecorder_more_volume"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/screen_recorder_force_support_playback_capture"
            android:summary="@string/screen_recorder_force_support_playback_capture_desc"
            android:key="prefs_key_screenrecorder_force_support_playback_capture"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/save_to_screen_title"
            android:summary="@string/screen_recorder_save_to_movies_desc"
            android:key="prefs_key_screenrecorder_save_to_movies"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>