<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/security_center"
    app:myLocationHyper="@string/security_center_hyperos"
    app:myLocationPad="@string/security_center_pad">

    <Preference
        android:title="@string/security_center_app_title"
        android:fragment="com.mxg.settings.ui.fragment.securitycenter.ApplicationsSettings" />

    <Preference
        android:title="@string/security_center_battery_title"
        android:fragment="com.mxg.settings.ui.fragment.securitycenter.BatterySettings" />

    <Preference
        android:title="@string/security_center_privacy_title"
        android:key="prefs_key_security_center_privacy_safety"
        android:fragment="com.mxg.settings.ui.fragment.securitycenter.PrivacySafetySettings" />

    <Preference
        android:title="@string/security_center_newbox_title"
        android:fragment="com.mxg.settings.ui.fragment.securitycenter.SidebarSettings" />

    <Preference
        android:title="@string/security_center_other_title"
        android:fragment="com.mxg.settings.ui.fragment.securitycenter.OtherSettings" />



</PreferenceScreen>