<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/camera">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_camera_custom_theme_color"
            android:title="@string/camera_custom_theme_color" />

        <ColorPickerPreference
            android:defaultValue="-2024677"
            android:dependency="prefs_key_camera_custom_theme_color"
            android:key="prefs_key_camera_custom_theme_color_picker"
            android:title="@string/camera_custom_theme_color_picker"
            app:showAlphaSlider="false" />

        <SwitchPreference
            android:title="@string/camera_max_brightness"
            android:key="prefs_key_camera_max_brightness"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/camera_custom_watermark"
            android:key="prefs_key_camera_custom_watermark"
            android:defaultValue="false" />

        <EditTextPreference
            android:title="@string/camera_custom_watermark_manufacturer"
            android:key="prefs_key_camera_custom_watermark_manufacturer"
            android:defaultValue=""
            android:dependency="prefs_key_camera_custom_watermark"/>

        <EditTextPreference
            android:title="@string/camera_custom_watermark_device"
            android:key="prefs_key_camera_custom_watermark_device"
            android:defaultValue=""
            android:dependency="prefs_key_camera_custom_watermark"/>

        <SwitchPreference
            android:title="@string/camera_black_leica"
            android:summary="@string/camera_black_leica_desc"
            android:key="prefs_key_camera_black_leica"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/camera_settings_lab_options"
            android:key="prefs_key_camera_settings_lab_options"
            android:defaultValue="false" />

        <SwitchPreference
            android:title="@string/camera_settings_track_eyes"
            android:key="prefs_key_camera_settings_track_eyes"
            android:dependency="prefs_key_camera_settings_lab_options"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>