<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <Preference
            android:key="prefs_key_home_gesture"
            android:title="@string/home_gesture"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeGestureSettings" />

        <Preference
            android:key="prefs_key_home_layout"
            android:title="@string/home_layout"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeLayoutSettings" />

        <Preference
            android:key="prefs_key_home_folder"
            android:title="@string/home_folder"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeFolderSettings" />

        <Preference
            android:key="prefs_key_home_drawer"
            android:title="@string/home_drawer"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeDrawerSettings" />

        <Preference
            android:key="prefs_key_home_title"
            android:title="@string/home_title"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeTitleSettings" />

        <Preference
            android:key="prefs_key_home_recent"
            android:title="@string/home_recent"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeRecentSettings" />

        <Preference
            android:key="prefs_key_home_widget"
            android:title="@string/home_widget"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeWidgetSettings" />

        <Preference
            android:key="prefs_key_home_dock"
            android:title="@string/home_dock"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeDockSettings" />

        <Preference
            android:key="prefs_key_home_other"
            android:title="@string/home_other"
            android:fragment="com.mxg.settings.ui.fragment.home.HomeOtherSettings" />

    </PreferenceCategory>

    <PreferenceCategory>
        <DropDownPreference
            android:defaultValue="6"
            android:key="prefs_key_home_recent_blur_level"
            android:title="@string/home_recent_blur_level"
            app:entries="@array/home_recent_blur"
            app:entryValues="@array/home_recent_blur_value" />

    </PreferenceCategory>

</PreferenceScreen>