<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/aiasst">
    <PreferenceCategory>
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aiasst_ai_captions"
            android:title="@string/aiasst_ai_captions" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aiasst_all_captions"
            android:summary="@string/only_new_version_can_do"
            android:title="@string/aiasst_all_captions" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aiasst_disable_watermark"
            android:title="@string/aiasst_disable_watermark" />

    </PreferenceCategory>

</PreferenceScreen>
