<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.base.settings.development.DevelopmentDebugInfoFragment"
        android:key="prefs_key_development_debug_info"
        android:title="@string/development_debug_info" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.base.settings.development.DevelopmentKillFragment"
        android:key="prefs_key_development_kill"
        android:title="@string/kill" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.base.settings.development.DevelopmentPrefsFragment"
        android:key="prefs_key_development_prefs"
        android:title="@string/development_prefs" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.base.settings.development.DevelopmentUIFragment"
        android:key="prefs_key_development_ui"
        android:title="@string/development_ui" />

    <Preference
        android:key="prefs_key_development_cmd_r"
        android:title="@string/development_cmd_r" />

    <Preference
        android:key="prefs_key_development_delete_all_dexkit_cache"
        android:title="@string/development_delete_all_dexkit_cache" />

</PreferenceScreen>