<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.systemui.LockScreenSettings"
        android:title="@string/system_ui_lockscreen_title" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.systemui.StatusBarSettings"
        android:title="@string/system_ui_statusbar_title" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.systemui.NavigationSettings"
        android:title="@string/system_ui_navigation_title" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.systemui.ControlCenterSettings"
        android:title="@string/system_ui_controlcenter_title" />

    <Preference
        android:fragment="com.mxg.settings.ui.fragment.systemui.SystemUIOtherSettings"
        android:title="@string/system_ui_other_title" />

</PreferenceScreen>