<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/lbe">
    <PreferenceCategory>
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_lbe_auto_start"
            android:title="@string/lbe_auto_start" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_lbe_clipboard_tip_toast"
            android:title="@string/lbe_clipboard_tip_toast"
            android:summary="@string/lbe_clipboard_tip_toast_desc" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="prefs_key_lbe_clipboard_tip_toast"
            android:key="prefs_key_lbe_disable_clipboard_tip"
            android:title="@string/lbe_disable_clipboard_tip" />

    </PreferenceCategory>
</PreferenceScreen>