<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/aod"
    app:myLocationHyper="@string/aod_hyperos">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aod_unlock_always_on_display"
            android:title="@string/aod_unlock_always_on_display" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aod_unlock_always_on_display_hyper"
            android:summary="@string/aod_unlock_always_on_display_more"
            android:title="@string/aod_unlock_always_on_display" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_aod_unlock_aon"
            android:title="@string/aod_unlock_aon" />

    </PreferenceCategory>

</PreferenceScreen>