<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/security_center_privacy_title">

    <PreferenceCategory
        android:key="prefs_key_security_center_privacy">
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_security_center_ai_clipboard"
            android:title="@string/security_center_ai_clipboard" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_security_center_blur_location"
            android:title="@string/security_center_blur_location" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_security_center_get_number"
            android:title="@string/security_center_get_number" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_security_center_hide_xopt_mode_tip"
            android:title="@string/security_center_hide_xopt_mode_tip" />

    </PreferenceCategory>
</PreferenceScreen>