<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <Preference
            android:enabled="false"
            android:key="prefs_key_textview_help_cant_see_apps"
            android:layout="@layout/preference_help"
            android:summary="@string/help_cant_see_apps_desc_no_hidden"
            android:title="@string/help_cant_see_apps_title" />

    </PreferenceCategory>

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_help_cant_see_apps_switch"
            android:title="@string/help_cant_see_apps_switch"
            android:summary="@string/help_cant_see_apps_switch_desc"/>

    </PreferenceCategory>

</PreferenceScreen>