<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/fileexplorer">

    <PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_file_explorer_unlock_file_parse"
            android:title="@string/file_explorer_unlock_file_parse" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_file_explorer_can_selectable"
            android:title="@string/file_explorer_can_selectable" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefs_key_file_explorer_is_single_line"
            android:title="@string/file_explorer_is_single_line" />

    </PreferenceCategory>

</PreferenceScreen>