<?xml version="1.0" encoding="utf-8"?>
<!-- this file is a part of MxGSettings. if you kang it w/o permission, or you don't credit, you're COOKED. T-T _/\_ -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:myLocation="@string/weather">
    <PreferenceCategory>
        <DropDownPreference
            android:key="prefs_key_weather_device_level"
            android:title="@string/weather_device_level_title"
            android:defaultValue="3"
            app:entries="@array/weather_device_level"
            app:entryValues="@array/weather_device_level_value" />

        <DropDownPreference
            android:key="prefs_key_weather_card_display_type"
            android:title="@string/weather_card_display_type_title"
            android:defaultValue="0"
            app:entries="@array/weather_card_display_type"
            app:entryValues="@array/weather_card_display_type_value" />

    </PreferenceCategory>

</PreferenceScreen>